kube/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow-server
          image: ghcr.io/mlflow/mlflow:v2.6.0
          args:
            - mlflow
            - server
            - --host=0.0.0.0
            - --port=5000
            - --backend-store-uri=sqlite:////mlflow_data/mlflow.db
            - --default-artifact-root=file:///mlflow_data/artifacts
            - --workers=2
          volumeMounts:
            - name: mlflow-storage
              mountPath: /mlflow_data
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
      volumes:
        - name: mlflow-storage
          emptyDir: {}
